# soroban-debugger

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PLUGIN_RELOAD_DIFF_IMPLEMENTATION.md  PR_DESCRIPTION.md  README.md  build.rs  build_error.txt  build_error_utf8.txt  build_error_v2.txt  build_error_v2_utf8.txt  check4.txt  check5.txt  check6.txt  check_errors.txt  check_errors2.txt  check_errors2_utf8.txt  check_errors3.txt  check_errors3_utf8.txt  check_errors_utf8.txt  is_guarded_history.txt  is_guarded_history_utf8.txt  orig_flamegraph.rs  orig_flamegraph_utf8.rs  run_local_ci.sh  security_diff.txt  security_diff_utf8.txt  security_old.txt  security_old_utf8.txt  temp_check.txt  test_storage_seed_feature.sh
.cargo/: config.toml
benches/: contract_execution.rs  storage_ops.rs
docs/: analyzer-suppressions.md  debug-cross-contract.md  faq.md  feature-matrix.md  inspect-command.md  landing.html  optimization-guide.md  plugin-api.md  plugin-command-namespaces.md  plugin-failure-handling.md  remote-debugging.md  remote-troubleshooting.md  resource-timeline.md  security-rules.md  source-level-debugging.md  upgrade-classes.md
examples/: analyzer-suppressions.toml  test_unbounded_iteration.rs
scratch/: test_whitespace  test_whitespace.rs
scripts/: check_benchmark_regressions.sh  check_manpages.sh  test_benchmark_regressions.sh  (+1 more)
tests/fixtures/contracts/: Cargo.toml
tests/fixtures/contracts/echo/src/: lib.rs
tests/fixtures/contracts/same_return/: Cargo.toml
tests/fixtures/contracts/same_return/src/: lib.rs
(+167 files in other folders)
